--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
       <div class="container">
         <div class="header__wrapper">
           <div class="header__title">Алексей Симонов</div>
-          <div class="header__contacts"></div>
+          <div class="header__contacts">
+            <a href="#" class="header__link">
+              <svg class="header__icon">
+                <title>telegram</title>
+                <use xlink:href="img/header.svg#telegram"></use>
+              </svg>
+            </a>
+            <a href="#" class="header__link">
+              <svg class="header__icon">
+                <title>email</title>
+                <use xlink:href="img/header.svg#email"></use>
+              </svg>
+            </a>
+            <a href="#" class="header__link">
+              <svg class="header__icon">
+                <title>vk</title>
+                <use xlink:href="img/header.svg#vk"></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </header>
