--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Алексей Симонов</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -16,19 +19,19 @@
         <div class="header__wrapper">
           <div class="header__title">Алексей Симонов</div>
           <div class="header__contacts">
-            <a href="#" class="header__link">
+            <a href="https://t.me/simolecs" target="_blank" class="header__link">
               <svg class="header__icon">
                 <title>telegram</title>
                 <use xlink:href="img/header.svg#telegram"></use>
               </svg>
             </a>
-            <a href="#" class="header__link">
+            <a href="mailto:simolex@yandex.ru" target="_blank" class="header__link">
               <svg class="header__icon">
                 <title>email</title>
                 <use xlink:href="img/header.svg#email"></use>
               </svg>
             </a>
-            <a href="#" class="header__link">
+            <a href="https://vk.com/id703014153" target="_blank" class="header__link">
               <svg class="header__icon">
                 <title>vk</title>
                 <use xlink:href="img/header.svg#vk"></use>
@@ -38,5 +41,15 @@
         </div>
       </div>
     </header>
+    <main class="hero">
+      <div class="container">
+        <div class="hero__wrapper">
+          <div class="hero__avatar">
+            <img src="img/avatar.svg" alt="Avatar" class="hero__image" />
+          </div>
+          <div class="hero__info"></div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
