сверстан блок информации

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Алексей Симонов</title>
+    <title>Веб-разработчик - Алексей Симонов</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -47,7 +47,82 @@
           <div class="hero__avatar">
             <img src="img/avatar.svg" alt="Avatar" class="hero__image" />
           </div>
-          <div class="hero__info"></div>
+          <div class="hero__info">
+            <div class="hero__header">
+              <h2 class="hero__title">Веб-разработчик</h2>
+              <ul class="hard hero__hard-skills">
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>Html-5</title>
+                    <use xlink:href="img/hard-skills.svg#html"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>Css-3</title>
+                    <use xlink:href="img/hard-skills.svg#css"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>Sass</title>
+                    <use xlink:href="img/hard-skills.svg#sass"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>JavaScript</title>
+                    <use xlink:href="img/hard-skills.svg#javascript"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>WebPack</title>
+                    <use xlink:href="img/hard-skills.svg#webpack"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>PHP</title>
+                    <use xlink:href="img/hard-skills.svg#php"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>Symfony</title>
+                    <use xlink:href="img/hard-skills.svg#symfony"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>Twig</title>
+                    <use xlink:href="img/hard-skills.svg#twig"></use>
+                  </svg>
+                </li>
+                <li class="hard__item">
+                  <svg class="hard__icon">
+                    <title>React</title>
+                    <use xlink:href="img/hard-skills.svg#react"></use>
+                  </svg>
+                </li>
+              </ul>
+            </div>
+            <div class="hero__content">
+              <p class="hero__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam nihil suscipit
+                expedita id, laborum temporibus dolorem quidem nobis quam deserunt autem magni
+                veniam vitae minus illum? Quaerat non ab consectetur dignissimos ipsum, magni quae
+                voluptatem animi voluptatibus tempore enim facilis eaque quis natus aliquam!
+                Veritatis nobis enim illo esse itaque voluptas maiores consequatur tenetur!
+              </p>
+              <p class="hero__text">
+                Odit et fuga soluta accusamus at ex nam aliquam pariatur facilis minus debitis
+                libero quae animi nisi fugiat quia harum delectus quo, corporis alias temporibus
+                ipsa! Laboriosam repellendus dolores cum, corrupti autem animi dolor tenetur quasi
+                recusandae eum sint quis tempore odio pariatur in error sapiente?
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
