--- a/index.html
+++ b/index.html
@@ -126,5 +126,38 @@
         </div>
       </div>
     </main>
+    <section class="profile">
+      <div class="container">
+        <div class="profile__wrapper">
+          <h2 class="profile__title">Мои проекты</h2>
+        </div>
+        <div class="project profile__projects">
+          <div class="project__item">
+            <a href="" class="project__preview"></a>
+            <div class="project__info">
+              <h3 class="project__name">Сайт отеля</h3>
+              <p class="project__description">цель проекта в следующем</p>
+              <div class="project__footer">Исходные данные</div>
+            </div>
+          </div>
+          <div class="project__item">
+            <a href="" class="project__preview"></a>
+            <div class="project__info">
+              <h3 class="project__name">Сайт отеля</h3>
+              <p class="project__description">цель проекта в следующем</p>
+              <div class="project__footer">Исходные данные</div>
+            </div>
+          </div>
+          <div class="project__item">
+            <a href="" class="project__preview"></a>
+            <div class="project__info">
+              <h3 class="project__name">Сайт отеля</h3>
+              <p class="project__description">цель проекта в следующем</p>
+              <div class="project__footer">Исходные данные</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
