--- a/index.html
+++ b/index.html
@@ -133,23 +133,36 @@
         </div>
         <div class="project profile__projects">
           <div class="project__item">
-            <a href="" class="project__preview"></a>
+            <a
+              href="https://simolex.ru/homeworks/lesson-14/"
+              target="_blank"
+              class="project__preview"
+            >
+              <img src="img/projects/project-1.jpg" alt="way-freelancer" />
+            </a>
             <div class="project__info">
-              <h3 class="project__name">Сайт отеля</h3>
-              <p class="project__description">цель проекта в следующем</p>
-              <div class="project__footer">Исходные данные</div>
+              <h3 class="project__name">Путь фрилансера</h3>
+              <p class="project__description">
+                Учебный проект, цель которого в изучения основ HTML, основ CSS, блочной модели CSS,
+                Flexbox CSS, способов подключение шрифтов на сайт, проверка блоков на
+                переполняемость, изучение позиционирования и адаптивная верстка. Верстка выполнялась
+                по растровому макету в формате Photoshop (*.PSD)
+              </p>
+              <div class="project__footer">Исходные данные: Макет в формате PSD</div>
             </div>
           </div>
           <div class="project__item">
-            <a href="" class="project__preview"></a>
+            <a href="https://simolex.ru/tour-plan/" class="project__preview">
+              <img src="img/projects/project-2.jpg" alt="Best Tour Plan" />
+            </a>
             <div class="project__info">
-              <h3 class="project__name">Сайт отеля</h3>
+              <h3 class="project__name">Best Tour Plan</h3>
               <p class="project__description">цель проекта в следующем</p>
-              <div class="project__footer">Исходные данные</div>
+              <div class="project__footer">Исходные данные: Макет в формате Figma</div>
             </div>
           </div>
           <div class="project__item">
-            <a href="" class="project__preview"></a>
+            <a href="#" class="project__preview"></a>
             <div class="project__info">
               <h3 class="project__name">Сайт отеля</h3>
               <p class="project__description">цель проекта в следующем</p>
