оформлен второй проект

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="project__info">
               <h3 class="project__name">Путь фрилансера</h3>
               <p class="project__description">
-                Учебный проект, цель которого в изучения основ HTML, основ CSS, блочной модели CSS,
+                Учебный проект, цель которого в изучении основ HTML, основ CSS, блочной модели CSS,
                 Flexbox CSS, способов подключение шрифтов на сайт, проверка блоков на
                 переполняемость, изучение позиционирования и адаптивная верстка. Верстка выполнялась
                 по растровому макету в формате Photoshop (*.PSD)
@@ -157,7 +157,12 @@
             </a>
             <div class="project__info">
               <h3 class="project__name">Best Tour Plan</h3>
-              <p class="project__description">цель проекта в следующем</p>
+              <p class="project__description">
+                Учебный проект, цель которого в изучении инструментов контроля версий Git,
+                методологии БЭМ, Grid CSS, препроцессора Sass, использование анимации на CSS,
+                использование JS библиотек для анимации верстки, верстка модальных окон, валидация и
+                отправка форм на электронную почту.
+              </p>
               <div class="project__footer">Исходные данные: Макет в формате Figma</div>
             </div>
           </div>
