оформлен второй проект

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
               <h3 class="project__name">Best Tour Plan</h3>
               <p class="project__description">
                 Учебный проект, цель которого в изучении инструментов контроля версий Git,
-                методологии БЭМ, Grid CSS, препроцессора Sass, использование анимации на CSS,
-                использование JS библиотек для анимации верстки, верстка модальных окон, валидация и
-                отправка форм на электронную почту.
+                методологии БЭМ, Grid CSS, препроцессора Sass, адаптив, использование анимации на
+                CSS, использование JS библиотек для анимации верстки, верстка модальных окон,
+                валидация и отправка форм на электронную почту.
               </p>
               <div class="project__footer">Исходные данные: Макет в формате Figma</div>
             </div>
