--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Веб-разработчик - Алексей Симонов</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -109,18 +106,29 @@
             </div>
             <div class="hero__content">
               <p class="hero__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam nihil suscipit
-                expedita id, laborum temporibus dolorem quidem nobis quam deserunt autem magni
-                veniam vitae minus illum? Quaerat non ab consectetur dignissimos ipsum, magni quae
-                voluptatem animi voluptatibus tempore enim facilis eaque quis natus aliquam!
-                Veritatis nobis enim illo esse itaque voluptas maiores consequatur tenetur!
+                Здравствуйте, меня зовут Алексей и я хочу предложить вам свои услуги в сфере веб-разработки.
               </p>
               <p class="hero__text">
-                Odit et fuga soluta accusamus at ex nam aliquam pariatur facilis minus debitis
-                libero quae animi nisi fugiat quia harum delectus quo, corporis alias temporibus
-                ipsa! Laboriosam repellendus dolores cum, corrupti autem animi dolor tenetur quasi
-                recusandae eum sint quis tempore odio pariatur in error sapiente?
+                Умею хорошо и качественно верстать сайты с применением технологий и инструментов, которые позволяют
+                делать их быстро и поддерживать долгие годы.
               </p>
+              <p class="hero__text">
+                Мой опыт поможет вам превратить, разработанный вашим дизайнером, макет в динамичный современный сайт.
+                Готовые сайты стабильно работают в любых популярных браузерах, на любых популярных устройстваю и
+                позволяют свободно менять медиа-контент и текстовое содержимое (если вам потребуется).
+              </p>
+              <p class="hero__text">
+                Программирую более двадцати пяти лет на различных языках, таких как: С/С++, PHP, SQL, PL/SQL и
+                WSH(JScript). Имею высшее профессиональное образование в области разработчики информационных систем.
+                Более девятнадцати лет работаю в области информационных технологий.
+              </p>
+              <p class="hero__text">
+                В середине 2021 года решил попробовать себя в фронтенд разработке. Окончил курсы по веб-верстке и
+                JavaScript. Все учебные и дипломные работы выполнены на отлично и проверены не менее тремя действующими
+                профессиональными веб-разработчиками, что могу подтвердить сертификатами, рекомендательными письмами и
+                реализованными проектами.
+              </p>
+              <p class="hero__text">Надеюсь на взаимное сотрудничество</p>
             </div>
           </div>
         </div>
@@ -133,20 +141,15 @@
         </div>
         <div class="project profile__projects">
           <div class="project__item">
-            <a
-              href="https://simolex.ru/homeworks/lesson-14/"
-              target="_blank"
-              class="project__preview"
-            >
+            <a href="https://simolex.ru/homeworks/lesson-14/" target="_blank" class="project__preview">
               <img src="img/projects/project-1.jpg" alt="way-freelancer" />
             </a>
             <div class="project__info">
               <h3 class="project__name">Путь фрилансера</h3>
               <p class="project__description">
-                Учебный проект, цель которого в изучении основ HTML, основ CSS, блочной модели CSS,
-                Flexbox CSS, способов подключение шрифтов на сайт, проверка блоков на
-                переполняемость, изучение позиционирования и адаптивная верстка. Верстка выполнялась
-                по растровому макету в формате Photoshop (*.PSD)
+                Учебный проект, цель которого в изучении основ HTML, основ CSS, блочной модели CSS, Flexbox CSS,
+                способов подключение шрифтов на сайт, проверка блоков на переполняемость, изучение позиционирования и
+                адаптивная верстка. Верстка выполнялась по растровому макету в формате Photoshop (*.PSD)
               </p>
               <div class="project__footer">Исходные данные: Макет в формате PSD</div>
             </div>
@@ -158,10 +161,9 @@
             <div class="project__info">
               <h3 class="project__name">Best Tour Plan</h3>
               <p class="project__description">
-                Учебный проект, цель которого в изучении инструментов контроля версий Git,
-                методологии БЭМ, Grid CSS, препроцессора Sass, адаптив, использование анимации на
-                CSS, использование JS библиотек для анимации верстки, верстка модальных окон,
-                валидация и отправка форм на электронную почту.
+                Учебный проект, цель которого в изучении инструментов контроля версий Git, методологии БЭМ, Grid CSS,
+                препроцессора Sass, адаптив, использование анимации на CSS, использование JS библиотек для анимации
+                верстки, верстка модальных окон, валидация и отправка форм на электронную почту.
               </p>
               <div class="project__footer">Исходные данные: Макет в формате Figma</div>
             </div>
