--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               </p>
               <p class="hero__text">
                 Мой опыт поможет вам превратить, разработанный вашим дизайнером, макет в динамичный современный сайт.
-                Готовые сайты стабильно работают в любых популярных браузерах, на любых популярных устройстваю и
+                Готовые сайты стабильно работают в любых популярных браузерах, на любых популярных устройствах и
                 позволяют свободно менять медиа-контент и текстовое содержимое (если вам потребуется).
               </p>
               <p class="hero__text">
