добавлен 3-ий проект

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="project__item">
-            <a href="https://simolex.ru/tour-plan/" class="project__preview">
+            <a href="https://simolex.ru/tour-plan/" target="_blank" class="project__preview">
               <img src="img/projects/project-2.jpg" alt="Best Tour Plan" />
             </a>
             <div class="project__info">
@@ -169,11 +169,20 @@
             </div>
           </div>
           <div class="project__item">
-            <a href="#" class="project__preview"></a>
+            <a href="https://simolex.ru/bookstore/" target="_blank" class="project__preview">
+              <img src="img/projects/project-3.jpg" alt="Storebook-Ehya" />
+            </a>
             <div class="project__info">
-              <h3 class="project__name">Сайт отеля</h3>
-              <p class="project__description">цель проекта в следующем</p>
-              <div class="project__footer">Исходные данные</div>
+              <h3 class="project__name">Книжный магазин - Ehya</h3>
+              <p class="project__description">
+                Итоговая работа по результатам обучения верстки, которая реализована с применением инструментов контроля
+                версий Git, методологии БЭМ, Flexbox CSS, Grid CSS, препроцессора Sass, реализована адаптивная верстка,
+                применена анимации на CSS, использованы JS библиотек и свои скрипты для анимации верстки, верстка
+                модальных окон, валидация и отправка форм на электронную почту. Работа выполнена полностью
+                самостоятельно и проверена не менее тремя действующими профессиональными веб-разработчиками
+              </p>
+
+              <div class="project__footer">Исходные данные: Макет в формате Figma и Техническое задание</div>
             </div>
           </div>
         </div>
