опубликованы болшенство проектов

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Веб-разработчик - Алексей Симонов</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -106,27 +109,30 @@
             </div>
             <div class="hero__content">
               <p class="hero__text">
-                Здравствуйте, меня зовут Алексей и я хочу предложить вам свои услуги в сфере веб-разработки.
+                Здравствуйте, меня зовут Алексей и я хочу предложить вам свои услуги в сфере
+                веб-разработки.
               </p>
               <p class="hero__text">
-                Умею хорошо и качественно верстать сайты с применением технологий и инструментов, которые позволяют
-                делать их быстро и поддерживать долгие годы.
+                Умею хорошо и качественно верстать сайты с применением технологий и инструментов,
+                которые позволяют делать их быстро и поддерживать долгие годы.
               </p>
               <p class="hero__text">
-                Мой опыт поможет вам превратить, разработанный вашим дизайнером, макет в динамичный современный сайт.
-                Готовые сайты стабильно работают в любых популярных браузерах, на любых популярных устройствах и
-                позволяют свободно менять медиа-контент и текстовое содержимое (если вам потребуется).
+                Мой опыт поможет вам превратить, разработанный вашим дизайнером, макет в динамичный
+                современный сайт. Готовые сайты стабильно работают в любых популярных браузерах, на
+                любых популярных устройствах и позволяют свободно менять медиа-контент и текстовое
+                содержимое (если вам потребуется).
               </p>
               <p class="hero__text">
-                Программирую более двадцати пяти лет на различных языках, таких как: С/С++, PHP, SQL, PL/SQL и
-                WSH(JScript). Имею высшее профессиональное образование в области разработчики информационных систем.
-                Более девятнадцати лет работаю в области информационных технологий.
+                Программирую более двадцати пяти лет на различных языках, таких как: С/С++, PHP,
+                SQL, PL/SQL и WSH(JScript). Имею высшее профессиональное образование в области
+                разработчики информационных систем. Более девятнадцати лет работаю в области
+                информационных технологий.
               </p>
               <p class="hero__text">
-                В середине 2021 года решил попробовать себя в фронтенд разработке. Окончил курсы по веб-верстке и
-                JavaScript. Все учебные и дипломные работы выполнены на отлично и проверены не менее тремя действующими
-                профессиональными веб-разработчиками, что могу подтвердить сертификатами, рекомендательными письмами и
-                реализованными проектами.
+                В середине 2021 года решил попробовать себя в фронтенд разработке. Окончил курсы по
+                веб-верстке и JavaScript. Все учебные и дипломные работы выполнены на отлично и
+                проверены не менее тремя действующими профессиональными веб-разработчиками, что могу
+                подтвердить сертификатами, рекомендательными письмами и реализованными проектами.
               </p>
               <p class="hero__text">Надеюсь на взаимное сотрудничество</p>
             </div>
@@ -141,48 +147,93 @@
         </div>
         <div class="project profile__projects">
           <div class="project__item">
-            <a href="https://simolex.ru/homeworks/lesson-14/" target="_blank" class="project__preview">
+            <a href="https://simolex.ru/freelancer" target="_blank" class="project__preview">
               <img src="img/projects/project-1.jpg" alt="way-freelancer" />
             </a>
             <div class="project__info">
               <h3 class="project__name">Путь фрилансера</h3>
               <p class="project__description">
-                Учебный проект, цель которого в изучении основ HTML, основ CSS, блочной модели CSS, Flexbox CSS,
-                способов подключение шрифтов на сайт, проверка блоков на переполняемость, изучение позиционирования и
-                адаптивная верстка. Верстка выполнялась по растровому макету в формате Photoshop (*.PSD)
+                Учебный проект, цель которого в изучении основ HTML, основ CSS, блочной модели CSS,
+                Flexbox CSS, способов подключение шрифтов на сайт, проверка блоков на
+                переполняемость, изучение позиционирования и адаптивная верстка. Верстка выполнялась
+                по растровому макету в формате Photoshop (*.PSD)
               </p>
               <div class="project__footer">Исходные данные: Макет в формате PSD</div>
             </div>
           </div>
           <div class="project__item">
-            <a href="https://simolex.ru/tour-plan/" target="_blank" class="project__preview">
+            <a href="https://simolex.ru/tour-plan" target="_blank" class="project__preview">
               <img src="img/projects/project-2.jpg" alt="Best Tour Plan" />
             </a>
             <div class="project__info">
               <h3 class="project__name">Best Tour Plan</h3>
               <p class="project__description">
-                Учебный проект, цель которого в изучении инструментов контроля версий Git, методологии БЭМ, Grid CSS,
-                препроцессора Sass, адаптив, использование анимации на CSS, использование JS библиотек для анимации
-                верстки, верстка модальных окон, валидация и отправка форм на электронную почту.
+                Учебный проект, цель которого в изучении инструментов контроля версий Git,
+                методологии БЭМ, Grid CSS, препроцессора Sass, адаптивная верстка, pixel perfect,
+                использование анимации на CSS, использование JS библиотек для анимации верстки,
+                верстка модальных окон, валидация и отправка форм на электронную почту.
               </p>
               <div class="project__footer">Исходные данные: Макет в формате Figma</div>
             </div>
           </div>
           <div class="project__item">
-            <a href="https://simolex.ru/bookstore/" target="_blank" class="project__preview">
+            <a href="https://simolex.ru/bookstore" target="_blank" class="project__preview">
               <img src="img/projects/project-3.jpg" alt="Storebook-Ehya" />
             </a>
             <div class="project__info">
               <h3 class="project__name">Книжный магазин - Ehya</h3>
               <p class="project__description">
-                Итоговая работа по результатам обучения верстки, которая реализована с применением инструментов контроля
-                версий Git, методологии БЭМ, Flexbox CSS, Grid CSS, препроцессора Sass, реализована адаптивная верстка,
-                применена анимации на CSS, использованы JS библиотек и свои скрипты для анимации верстки, верстка
-                модальных окон, валидация и отправка форм на электронную почту. Работа выполнена полностью
-                самостоятельно и проверена не менее тремя действующими профессиональными веб-разработчиками
+                Итоговая работа по результатам обучения верстки, которая реализована с применением
+                инструментов контроля версий Git, методологии БЭМ, Flexbox CSS, Grid CSS,
+                препроцессора Sass, реализована адаптивная верстка, применена анимации на CSS,
+                использованы JS библиотеки и свои скрипты для анимации верстки, верстка модальных
+                окон, валидация и отправка форм на электронную почту. Работа выполнена полностью
+                самостоятельно и проверена не менее тремя действующими профессиональными
+                веб-разработчиками, в том числе на соответствие pixel perfect.
               </p>
-
-              <div class="project__footer">Исходные данные: Макет в формате Figma и Техническое задание</div>
+              <div class="project__footer">
+                Исходные данные: Макет в формате Figma и Техническое задание
+              </div>
+            </div>
+          </div>
+          <div class="project__item">
+            <a href="https://simolex.ru/3d-model" target="_blank" class="project__preview">
+              <img src="img/projects/project-4.jpg" alt="3d-Model" />
+            </a>
+            <div class="project__info">
+              <h3 class="project__name">Услуги по 3D моделированию - Glo 3D</h3>
+              <p class="project__description">
+                Учебный проект, цель которого в изучении JavaScript, стандарта ES6, модульной
+                структуры и WebPack, применение JS анимации, обработка событий и их делегирование,
+                создание калькуляторов, создание слайдеров, валидация и отправка форм на электронную
+                почту, анимация меню и модальных форм
+              </p>
+              <div class="project__footer">
+                Исходные данные: Готовая верстка, которую необходимо сделать динамичной и
+                отзывчивой.
+              </div>
+            </div>
+          </div>
+          <div class="project__item">
+            <a href="https://simolex.ru/glazing-windows/" target="_blank" class="project__preview">
+              <img src="img/projects/project-5.jpg" alt="3d-Model" />
+            </a>
+            <div class="project__info">
+              <h3 class="project__name">Остекление балконов и лоджий</h3>
+              <p class="project__description">
+                Итоговая работа по результатам изучения JavaScript, в которой по ТЗ реализован
+                следующий функционал: открытие и закрытие модальных окон двух видов, плавная
+                прокутка при нажатии кнопки "Вверх", таймер обратного отсчета, анимированное
+                открытие сертификатов и документов, два различных слайдера, калькулятор для
+                балконов, валидация и отправка форм обратной связи. Дополнительное задание:
+                отображение и смена отзывов с интервалом 7 сек из JSON-файла. Работа выполнена
+                полностью самостоятельно и проверена не менее тремя действующими профессиональными
+                веб-разработчиками.
+              </p>
+              <div class="project__footer">
+                Исходные данные: Готовая верстка, которую необходимо сделать динамичной и
+                отзывчивой.
+              </div>
             </div>
           </div>
         </div>
